examples/test/testpolicy2389.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2389
  namespace: namespace366
spec:
  podSelector:
    matchLabels:
      key44: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value9
          key24: value39
      podSelector:
        matchLabels:
          key19: value36
          key25: value32
